[package]
name = "servo-fontconfig-sys"
version = "4.0.7"
authors = ["Keith Packard <keithp@keithp.com>", "Patrick Lam <plam@mit.edu>"]
license = "MIT"
description = "Font configuration and customization library"
homepage = "http://fontconfig.org"
repository = "https://github.com/servo/libfontconfig/"
links = "fontconfig"
build = "build.rs"

[lib]
name = "fontconfig_sys"
path = "lib.rs"

[dependencies]
expat-sys = "2.1.0"
servo-freetype-sys = "4.0.0"

[build-dependencies]
pkg-config = "0.3"
