[package]
name = "servo-fontconfig-sys"
version = "5.1.0"
authors = ["Keith Packard <keithp@keithp.com>", "Patrick Lam <plam@mit.edu>"]
license = "MIT"
description = "Font configuration and customization library"
homepage = "http://fontconfig.org"
repository = "https://github.com/servo/libfontconfig/"
links = "fontconfig"
build = "build.rs"

[lib]
name = "fontconfig_sys"
path = "lib.rs"

[dependencies]
expat-sys = "2.1.0"
freetype-sys = "0.13.0"

[package.metadata.system-deps]
fontconfig = "2.11"

[build-dependencies]
system-deps = "3.1.2"

[features]
default = []
force_system_lib = []
